# chatengine-app

./: .gitignore  build.gradle  feature.xcf
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/schemas/com.kdrag0n.chathive.database.AppDatabase/: 1.json  2.json
app/src/androidTest/java/com/kdragon/android/chatengine/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/khronodragon/android/chatengine/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: base64.h  chatauth.cpp  native-lib.cpp
app/src/main/java/com/kdrag0n/chathive/: AboutActivity.kt  InternalMessageHolder.kt  LicenseActivity.kt  MainActivity.kt  MessageListAdapter.kt  ReceivedMessageHolder.kt  SentMessageHolder.kt  SettingsActivity.kt
app/src/main/java/com/kdrag0n/chathive/database/: AppDatabase.kt  Converters.kt  MessageDao.kt
app/src/main/java/com/kdrag0n/chathive/models/: Message.kt  MessageHistoryList.kt  MessageList.kt  MessageSender.kt
app/src/main/java/com/kdrag0n/utils/: AboutCardRow.kt  Utils.kt
app/src/main/java/com/kdragon/android/chatengine/: AboutActivity.kt  ChatActivity.kt  InternalMessageHolder.kt  MainActivity.kt  MessageListAdapter.kt  ReceivedMessageHolder.kt  SentMessageHolder.kt
app/src/main/java/com/kdragon/android/chatengine/models/: APIRequest.kt  Message.kt  (+3 more)
app/src/main/java/com/kdragon/android/utils/: AboutCardRow.kt  CollectionUtils.kt  ExecUtils.kt  ImageUtils.kt  StringUtils.kt  TimeUtils.kt  Utils.kt
app/src/main/java/com/khronodragon/android/chatengine/: ChatActivity.kt  InternalMessageHolder.kt  MessageListAdapter.kt  ReceivedMessageHolder.kt  SentMessageHolder.kt  Utils.kt
app/src/main/java/com/khronodragon/android/utils/: CollectionUtils.kt  ExecUtils.kt  ImageUtils.kt  StringUtils.kt  TimeUtils.kt
app/src/main/res/drawable/: launch_screen.xml  rounded_rect_received.xml  rounded_rect_sent.xml
app/src/main/res/layout/: activity_about.xml  activity_history.xml  activity_license.xml  activity_main.xml  chat_view.xml  message_internal.xml  message_received.xml  message_sent.xml
app/src/main/res/menu/: actions.xml
app/src/main/res/values/: attr.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-v23/: styles.xml
app/src/test/java/com/kdragon/android/chatengine/: ExampleUnitTest.kt
app/src/test/java/com/khronodragon/android/chatengine/: ExampleUnitTest.kt
(+6 files in other folders)
